--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Screenpipe + Tauri + React + Vite</title>
   </head>
 
-  <body>
+  <body class="arrow">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
